# speaker_tracker

./: .env.example  .gitignore  CODE_REVIEW.md  MCP_EXPLAINED.md  README.md  pyproject.toml  server.py  test_notion.py
src/sapa_speaker_tracker/: __init__.py  models.py  notion_client.py
